# GalacticOffensiveUpgrade

./: CMakeLists.txt  PROPOSAL.md
src/: bullet.cxx  bullet.hxx  galactic_offensive.cxx  geometry.cxx  geometry.hxx  model.cxx  model.hxx  ship.cxx  ship.hxx  ui.cxx  ui.hxx
test/: model_test.cxx
